Bug 155835 - Incorrect display of Cyrillic characters in the text in LO Writer
Summary: Incorrect display of Cyrillic characters in the text in LO Writer
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.2.0 target:25.8.0.0.beta2 t...
Keywords:
Depends on:
Blocks:
 
Reported: 2023-06-14 15:28 UTC by randylow77
Modified: 2025-06-17 09:37 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
file created in MS Word in RTF format, which contains Cyrillic characters of the Russian language (48.95 KB, application/rtf)
2023-06-14 15:42 UTC, randylow77
Details
new file (5.76 KB, application/rtf)
2023-06-14 21:21 UTC, randylow77
Details
I am adding another file with Cyrillic characters that does not open correctly in LO Writer, but is displayed correctly in MS Word and Only Office. (54.54 KB, application/rtf)
2023-06-15 13:18 UTC, randylow77
Details
Minimized sample (299 bytes, application/msword)
2023-06-15 13:44 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description randylow77 2023-06-14 15:28:20 UTC
Description:
We open a file created in MS Word in RTF format, which contains Cyrillic characters of the Russian language. Some of them in the Arial font are displayed correctly, the other part in the Calibri font are displayed with icons with the wrong encoding.

Steps to Reproduce:
1.Open file in LO Writer
2.
3.

Actual Results:
We see icons with the wrong encoding.

Expected Results:
Expecting a properly rendered file without encoding failure.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 7.3.7.2 / LibreOffice Community
Build ID: 30(Build:2)
CPU threads: 2; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: ru-RU (ru_RU.UTF-8); UI: ru-RU
Ubuntu package version: 1:7.3.7-0ubuntu0.22.04.3
Calc: threaded
Comment 1 randylow77 2023-06-14 15:42:31 UTC
Created attachment 187911 [details]
file created in MS Word in RTF format, which contains Cyrillic characters of the Russian language

We open a file created in MS Word in RTF format, which contains Cyrillic characters of the Russian language. Some of them in the Arial font are displayed correctly, the other part in the footnotes at the bottom of the document in the Calibri font are displayed with icons with the wrong encoding.

This file is displayed in the correct encoding in other office suites (MO Word, Only Office).

Screnshot - https://ibb.co/BKpT3BB
Comment 2 Mike Kaganski 2023-06-14 20:18:41 UTC
This file is not created in MS Word: it is created in LibreOffice - maybe just opening the original RTF from MS Word in Writer, and re-saving. This created a new file from the data that LibreOffice understood, and destroyed everything. This file can't show and allow to fix the problem.
Comment 3 randylow77 2023-06-14 21:21:47 UTC
Created attachment 187916 [details]
new file

I tried to delete my personal data by another method.
I opened this file in Windows 7 using notepad and deleted my personal data and saved it. In LO Writer, the same unreadable characters remain in the footnotes. In Microsoft Word they are displayed in the correct encoding, in Only Office they are also displayed correctly.
Comment 4 randylow77 2023-06-14 21:34:08 UTC
I will clarify the initial data a little.
I assumed that this file was created in Microsoft Word, but what I know for sure is that it was created in Windows. Then I changed my personal data in this file using LO Writer in Linux and attached a saved file with the same RTF extension to the message.
I must have misled you with this. I apologize for this unconscious act.
Comment 5 randylow77 2023-06-15 13:18:53 UTC
Created attachment 187926 [details]
I am adding another file with Cyrillic characters that does not open correctly in LO Writer, but is displayed correctly in MS Word and Only Office.
Comment 6 Mike Kaganski 2023-06-15 13:44:08 UTC
Created attachment 187927 [details]
Minimized sample

(In reply to randylow77 from comment #3)
> Created attachment 187916 [details]
> new file

Repro. This is a minimized sample.

(In reply to randylow77 from comment #5)
> Created attachment 187926 [details]
> I am adding another file with Cyrillic characters that does not open
> correctly in LO Writer, but is displayed correctly in MS Word and Only
> Office.

This opens fine using Version: 7.5.4.2 (X86_64) / LibreOffice Community
Build ID: 36ccfdc35048b057fd9854c757a8b67ec53977b6
CPU threads: 12; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: CL threaded

Looks like a separate issue.
Comment 7 randylow77 2023-06-15 14:34:17 UTC
(In reply to Mike Kaganski from comment #6)
> Created attachment 187927 [details]
> Minimized sample
> 
> (In reply to randylow77 from comment #3)
> > Created attachment 187916 [details]
> > new file
> 
> Repro. This is a minimized sample.
> 
$ libreoffice --safe-mode

https://ibb.co/mHpj4jC
Comment 8 randylow77 2023-06-15 14:41:02 UTC
https://ibb.co/YfDsmyF
Comment 9 randylow77 2025-06-14 11:39:45 UTC
A year later, this file still opens with the wrong encoding, but already in version 24.2.7.2.
Comment 10 randylow77 2025-06-14 11:41:04 UTC
Two years later, this file still opens with the wrong encoding, but already in version 24.2.7.2.
Comment 11 Mike Kaganski 2025-06-14 14:53:32 UTC
https://gerrit.libreoffice.org/c/core/+/186499
Comment 12 Commit Notification 2025-06-14 15:55:15 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/41b1542326d4924730ffad51cd01399f3b6ca237

tdf#155835: copy current encoding into newly created substream state

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2025-06-16 11:27:08 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/66a3d04b5d5e1b968557c0eb656753a77831a87e

tdf#155835: copy current encoding into newly created substream state

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2025-06-17 09:37:52 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/70f3d70044c77f3d62ee740c0af705ec9998b44f

tdf#155835: copy current encoding into newly created substream state

It will be available in 25.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.