tdf#155835: copy current encoding into newly created substream state

RTF is defined to copy the current state whenever a new destination
appears. Before the change, RTFDocumentImpl::resolveSubstream didn't
keep its current encoding in the child RTFDocumentImpl; that led to
its m_aDefaultState having the default RTL_TEXTENCODING_MS_1252; and
when the destination didn't define its own encoding (e.g. using \fN),
the non-ASCII octets were treated incorrectly.

I don't know if other members of m_aDefaultState should be set to
parent's current state. In theory, this could even be a full copy.

Change-Id: I6f53bfd519598b5a4b5cd1f04f13575a5aa1fa2f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186499
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 41b1542326d4924730ffad51cd01399f3b6ca237)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186545
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit 66a3d04b5d5e1b968557c0eb656753a77831a87e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186562
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>